Fixed big main menu sie, and properly removed hover states for mobile.

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -6,10 +6,10 @@
 @import "cssAni";
 
 body {
-  .navWrapper {
-    overflow: hidden;
-    height: 69px;
-  }
+  // .navWrapper {
+  //   overflow: hidden;
+  //   height: 69px;
+  // }
 
   // Max width for the whole website
   max-width: 1260px;
