--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -85,10 +85,10 @@ article {
   right: 2%;
   // Make sure it does not overlap
   z-index: 99;
-  // Remove borders
-  border: none;
-  // Remove outline
-  outline: none;
+  // // Remove borders
+  // border: none;
+  // // Remove outline
+  // outline: none;
   // Add a mouse pointer on hover
   cursor: pointer;
   // Some padding
