--- a/styles/scss/_sizes.scss
+++ b/styles/scss/_sizes.scss
@@ -5,7 +5,7 @@ $base-spacing-units: 24px;
 $base-font-size: 16px;
 $base-line-hight: $base-spacing-units;
 
-// Media Query Sizes
+// Media query sizes
 $screen-size-small: 580px;    // max-width
 $screen-size-medium: 581px;   // min-width
 $screen-size-medium-landscape: 700px;
