--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -294,7 +294,7 @@ article {
     // Set individual code article padding
     padding: $spacing-large;
   }
-  article > p {
+  #wrap1html article > p {
     // Set code article description padding
     padding: $spacing-normal 0 0;
 
