--- a/styles/scss/_cssGridStyles.scss
+++ b/styles/scss/_cssGridStyles.scss
@@ -1,60 +1,23 @@
 @import "sizes";
 
-#wrap2layout article {
-  margin-bottom: $spacing-normal;
+.grid {
+  display: grid;
+  grid-gap: 10px;
 }
 
-/*
-  On a side note, "!important" ups the importance of any property. Very useful! The one who is above all! :D
-*/
-
-.solidBorder2 {
-  border: 2px solid black !important;
-}
-
-.bottomMargin {
-  margin-bottom: $spacing-normal;
-}
-
-/*
-  Simple styles for the divs grid.
-*/
-
-.grid > div {
-  border: 1px solid #ccc;
-  background: #eee;
-  padding: 1em;
-}
-
-.grid > div:nth-child(odd) {
-  background: #ddd;
-}
-
-// body p {
-//   padding: 0 20px;
-// }
-
-#wrap2layout .example-box p {
-  padding-bottom: $spacing-normal;
-}
 /* === Example 1 === */
 
 /*
-  Default look - no coding.
+  No special coding.
 */
 
 /* === Example 2 === */
 
 .grid_2 {
-  display: grid;
   /*
   The below code declares width of each child div.
   */
   grid-template-columns: 2fr 3fr;
-  /* column-gap */
-  grid-column-gap: 5px;
-  /* row-gap */
-  grid-row-gap: 5px;
 }
 
 /*
@@ -64,9 +27,7 @@
 /* === Example 3 === */
 
 .grid_3 {
-  display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-gap: 5px;
 }
 
 /* === Example 4 === */
@@ -76,14 +37,12 @@
  */
 
 .grid_4 {
-  display: grid;
   grid-template-columns: repeat(6, 1fr);
 }
 
 /* === Example 5 === */
 
 .grid_5 {
-  display: grid;
   grid-template-columns: repeat(5, 1fr);
   /* Below line defines a static height. */
   /* grid-auto-rows: 100px; */
@@ -95,7 +54,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 50px;
-  grid-gap: 5px;
 }
 
 .nestedDiv > div {
@@ -145,7 +103,6 @@
 
 .grid_6 {
   display: grid;
-  grid-gap: 5px;
   grid-template-columns: 1fr 2fr 1fr;
   /*
     The value below sets the minimum and maximum height of each row. This is very useful to prevent content from overflowing its containing box.
