--- a/styles/scss/_cssGridStyles.scss
+++ b/styles/scss/_cssGridStyles.scss
@@ -92,17 +92,20 @@
 /* align-self */
 
 .exampleDiv1 {
-  align-self: center;
+  align-self: start;
 }
 
 .exampleDiv2 {
+  align-self: center;
+}
+
+.exampleDiv3 {
   align-self: end;
 }
 
 /* === Example 6 === */
 
 .grid_6 {
-  display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   /*
     The value below sets the minimum and maximum height of each row. This is very useful to prevent content from overflowing its containing box.
@@ -121,10 +124,6 @@
 
 .box_2 {
   grid-row: 1/3;
-}
-
-.box_4 {
-  grid-column: 2/4;
 }
 
 .box_3 {
