flats - draft examples.

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -3,8 +3,8 @@
 @import "sizes";
 @import "fonts";
 @import "theme";
-@import "cssAni";
 @import "cssGridStyles";
+@import "floatStyles";
 
 // General website styling
 body {
