--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -2,7 +2,7 @@
 @import "../normalize";
 @import "fonts";
 @import "theme";
-@import "styles";
+@import "structure";
 @import "cssGrid";
 @import "floats";
 @import "flexBox";
