Float section, example 1 and 2  has been spelled checked.

--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -182,11 +182,11 @@ article {
       animation: navAnimate 0.15s ease-in-out 0s forwards;
     }
   }
-  article {
-    @include hoverNfocus() {
-      border: dotted 2px $color2;
-    }
-  }
+  // article {
+  //   @include hoverNfocus() {
+  //     border: dotted 2px $color2;
+  //   }
+  // }
 
   #bckBtn {
     @include hoverNfocus() {
