--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,8 +1,9 @@
 // Main scss file
-@import "../normalize";
+@import "normalize";
 @import "fonts";
 @import "theme";
 @import "structure";
 @import "cssGrid";
 @import "floats";
 @import "flexBox";
+//
