--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,10 @@
 
-@import "normalize.css";
+@import "/node_modules/normalize.css/normalize.css";
 @import "other/mixins";
 @import "other/mixinsMedia";
 
-@import "global/header";
 @import "global/global";
+@import "global/header";
+@import "global/article";
 @import "global/footer";
 @import "global/toTopBtn";
