--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -10,3 +10,10 @@ $color9: FireBrick;
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
 
+.no-margin {
+  margin: 0;
+}
+
+p {
+  margin: 0 0 0.5rem 0;
+}
