--- a/src/sass/global/_article.scss
+++ b/src/sass/global/_article.scss
@@ -6,6 +6,7 @@
     text-align: center;
     padding: 10px 0 20px;
     text-transform: uppercase;
+    margin-bottom: 0;
   }
 
   &__sub-wrap {
@@ -16,11 +17,22 @@
 }
 
 .dev-article {
-  margin: 20px 0;
   padding: 20px 50px;
+  margin: 20px 0;
   width: 40%;
   background-color: white;
   border-radius: 5px;
+
+  @include desktop-small {
+    padding: 10px 50px 30px;
+    margin: 30px 0;
+    width: 85%;
+  }
+
+  @include mobile {
+    padding: 5px 30px 15px;
+    width: 95%;
+  }
 
   &__title {
     text-align: center;
