--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,4 +9,7 @@
 @import "global/footer";
 @import "global/toTopBtn";
 
-@import "global/floats";
+@import "example-styles/floats";
+@import "example-styles/flexbox";
+@import "example-styles/grid";
+
