gird layout examples

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import "global/global";
 @import "global/header";
+@import "global/siteSection";
 @import "global/article";
 @import "global/footer";
 @import "global/toTopBtn";
