--- a/src/sass/global/_article.scss
+++ b/src/sass/global/_article.scss
@@ -1,21 +1,3 @@
-.siteSection {
-  margin: 50px 0;
-  padding: 0 30px; 
-
-  &__heading {
-    text-align: center;
-    padding: 10px 0 20px;
-    text-transform: uppercase;
-    margin-bottom: 0;
-  }
-
-  &__sub-wrap {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-}
-
 .dev-article {
   padding: 20px 50px;
   margin: 20px 0;
@@ -41,6 +23,13 @@
   &__text {
     text-align: justify;
   }
+}
+
+.dev-article-2 {
+  padding: 20px 50px;
+  margin: 20px 0;
+  background-color: white;
+  border-radius: 5px;
 }
 
 .code-example {
