--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -17,3 +17,15 @@ $color9: FireBrick;
 p {
   margin: 0 0 0.5rem 0;
 }
+
+.siteBody {
+  font-family: 'Quicksand', helvetica, sans-serif;
+  color: #323232;
+  background-color: #e6e6e6;
+
+  @include above-desktop-regular {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    max-width: 1440px;
+    margin: 30px auto 0;
+  }
+}
