--- a/src/sass/global/_header.scss
+++ b/src/sass/global/_header.scss
@@ -96,17 +96,19 @@
   &__line {
     height: 5px;
     width: 30px;
+    left: 18%;
+
     position: absolute;
     background-color: black;
     border-radius: 10px;
 
     transition: opacity 50ms,
-      top 200ms,
-      transform 200ms;
+      top 200ms ease,
+      transform 200ms ease;
   }
 
   &__line-1 {
-    top: 9px;
+    top: 10px;
   }
 
   &__line-2 {
@@ -114,7 +116,7 @@
   }
 
   &__line-3 {
-    top: 31px;
+    top: 30px;
   }
 
   &__wrap {
@@ -131,7 +133,7 @@
 
   .menu-btn__line-1 {
     transform: rotate(45deg);
-    top: 21px;
+    top: 20px;
   }
 
   .menu-btn__line-2 {
