--- a/src/sass/global/_header.scss
+++ b/src/sass/global/_header.scss
@@ -31,7 +31,7 @@
 }
 
 .mainNav {
-  &__wrap {
+  &__list {
     background-color: #2d7ed2;
     justify-content: center;
     display: flex;
@@ -41,19 +41,13 @@
     padding: 0;
 
     @include mobile {
-      transition: height 500ms;
       flex-direction: column;
       align-items: center;
       padding: 5px 0;
-      height: 0;
-    }
-  }
-
-  &__wrap--active {
-    @include mobile {
       height: 280px;
     }
   }
+
 
   &__item {
     display: flex;
@@ -72,6 +66,18 @@
 
     &:hover {
       border-bottom: 2px solid firebrick;
+    }
+  }
+}
+
+.mainNav__container {
+  @include mobile {
+    transition: height 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    overflow: hidden;
+    height: 0;
+
+    &.active {
+      height: 280px;
     }
   }
 }
