--- a/src/sass/other/_mixinsMedia.scss
+++ b/src/sass/other/_mixinsMedia.scss
@@ -6,61 +6,61 @@ $desktop-large: 2160px;
 
 
 @mixin above-desktop-large {
-  @media (min-width: #{$desktop-large + 1}) {
+  @media (min-width: #{$desktop-large}) {
     @content;
   }
 }
 
 @mixin desktop-large {
-  @media (max-width: #{$desktop-large}) {
+  @media (max-width: #{$desktop-large + 1}) {
     @content;
   }
 }
 
 @mixin above-desktop-regular {
-  @media (min-width: #{$desktop-regular + 1}) {
+  @media (min-width: #{$desktop-regular}) {
     @content;
   }
 }
 
 @mixin desktop-regular {
-  @media (max-width: #{$desktop-regular}) {
+  @media (max-width: #{$desktop-regular + 1}) {
     @content;
   }
 }
 
 @mixin above-desktop-small {
-  @media (min-width: #{$desktop-small + 1}) {
+  @media (min-width: #{$desktop-small}) {
     @content;
   }
 }
 
 @mixin desktop-small {
-  @media (max-width: #{$desktop-small}) {
+  @media (max-width: #{$desktop-small + 1}) {
     @content;
   }
 }
 
 @mixin above-tablet {
-  @media (min-width: #{$tablet + 1}) {
+  @media (min-width: #{$tablet}) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media (max-width: #{$tablet}) {
+  @media (max-width: #{$tablet + 1}) {
     @content;
   }
 }
 
 @mixin above-mobile {
-  @media (min-width: #{$mobile + 1}) {
+  @media (min-width: #{$mobile}) {
     @content;
   }
 }
 
 @mixin mobile {
-  @media (max-width: #{$mobile}) {
+  @media (max-width: #{$mobile + 1}) {
     @content;
   }
 }
